# geometrism

./: README.md  geometrism.cabal  synthdefs.scd
src/: Geometrism.hs
